--- a/src/input.css
+++ b/src/input.css
@@ -1,120 +1,139 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+  h1,
+  h2 {
+    @apply font-bold;
+  }
 
-    h1,
-    h2 {
-        @apply font-bold;
-    }
-
-    p {
-        @apply text-sm;
-    }
+  p {
+    @apply text-sm;
+  }
 }
 
 @layer components {
-    .container {
-        @apply max-w-[98rem] px-[1.5rem] w-full mx-auto;
-    }
+  .container {
+    @apply max-w-[98rem] px-[1.5rem] w-full mx-auto;
+  }
 
-    .header {
-        @apply font-[Raleway] relative
-    }
+  .header {
+    @apply font-[Raleway] relative;
+  }
 
-    .header .header__branding {
-        @apply flex flex-row justify-between items-center border-b-[1px] border-dark py-[0.5rem]
-    }
+  .header .header__branding {
+    @apply flex justify-between items-center border-b-[1px] border-dark py-[0.5rem];
+  }
 
-    .header .header__branding img {
-        @apply max-w-[12.5rem]
-    }
+  .header .header__branding img {
+    @apply max-w-[12.5rem];
+  }
+  .header .header__navd {
+    @apply hidden md:block;
+  }
 
-    .header .header__contactInfo {
-        @apply hidden md:flex md:items-center gap-4 text-base
-    }
+  .header .header__navd ul {
+    @apply md:flex justify-between items-center py-1;
+  }
 
-    .header .header__contactInfo ul {
-        @apply md:flex gap-4
-    }
+  .header .header__navd ul li {
+    @apply border-r-[2px];
+  }
 
-    .header .header__contactInfo ul li {
-        @apply md:flex gap-1
-    }
+  .header .header__navd ul li a {
+    @apply px-14 py-3;
+  }
 
-    .header .header__navd {
-        @apply hidden md:block;
-    }
+  .header .header__navd ul li a.active {
+    @apply border-t-8 border-yellow rounded-sm py-3;
+  }
 
-    .header .header__navd ul {
-        @apply md:flex justify-between items-center py-1
-    }
+  .header .header__navd ul li:last-child {
+    @apply border-none;
+  }
 
-    .header .header__navd ul li {
-        @apply border-r-[2px]
-    }
+  .header .header__action {
+    @apply md:hidden bg-light h-[90vh] absolute w-0 overflow-hidden transition-all right-0;
+  }
+  .header .header__action.open {
+    @apply w-[100%] transition-all;
+  }
+  .header .header__navm li {
+    @apply flex justify-center p-4;
+  }
+  .header .header__contactInfo ul li {
+    @apply flex justify-center p-3;
+  }
 
-    .header .header__navd ul li a {
-        @apply px-14 py-3
-    }
+  .header .header__contactInfo {
+    @apply md:top-0;
+  }
+  .header .header__contactInfo ul{
+    @apply md:flex;
+  }
+  .header .header__contactInfo ul li{
+    @apply gap-4;
+  }
 
-    .header .header__navd ul li a.active {
-        @apply border-t-8 border-yellow rounded-sm py-3
-    }
+  .burger__menu {
+    @apply md:hidden;
+  }
 
-    .header .header__navd ul li:last-child {
-        @apply border-none
-    }
+  .burger__menu span {
+    @apply block w-[40px] h-[0.2rem] bg-dark;
+  }
+  .burger__menu.open span {
+    @apply h-[0.3rem] rounded-full transform;
+  }
+  .burger__menu span:nth-child(2) {
+    @apply my-1;
+  }
 
-    .header .header__navm {
-        @apply md:hidden flex justify-center bg-light h-[90vh] absolute w-0 overflow-hidden transition-all right-0;
-    }
-    .header .header__navm.open{
-        @apply w-[100%] transition-all;
-    }
+  .burger__menu.open span:first-child {
+    @apply w-[20px] transform translate-y-[1.7px] translate-x-[20.5px] rotate-[225deg] transition-all;
+  }
+  .burger__menu.open span:last-child {
+    @apply w-[20px] transform translate-y-[-1.7px] translate-x-[20.5px] rotate-[-225deg] transition-all;
+  }
 
-    .header .header__navm ul li {
-        @apply m-6 flex place-self-center
-    }
-    .burger__menu {
-        @apply md:hidden
-    }
-
-    .burger__menu span {
-        @apply block w-[40px] h-[0.2rem] bg-dark
-    }
-    .burger__menu.open span {
-        @apply h-[0.3rem] rounded-full transform
-    }
-    .burger__menu span:nth-child(2) {
-        @apply my-1 
-    }
-
-    .burger__menu.open span:first-child {
-        @apply w-[20px] transform translate-y-[1.7px] translate-x-[20.5px] rotate-[225deg] transition-all;
-    }
-    .burger__menu.open span:last-child {
-        @apply w-[20px] transform translate-y-[-1.7px] translate-x-[20.5px] rotate-[-225deg] transition-all;
-    }
+  /* banner */
+.homeBanner {
+    @apply bg-homeBannerImage  h-[90vh] bg-no-repeat bg-cover text-light
+}
+.homeBanner__wrapper {
+    @apply text-center py-[7rem];
+}
+.homeBanner__wrapper h1 {
+    @apply font-serif flex text-[clamp(39.36px,4vw,80px)] mb-[20px];
+}
+.homeBanner__wrapper p {
+    @apply mb-[5rem] max-w-[45rem] m-auto;
+}
 }
 
 @layer utilities {
-    .btn {
-        @apply inline-block px-6 py-2.5 rounded-md bg-transparent;
-    }
+  .btn {
+    @apply inline-block m-auto px-6 py-2.5 rounded-md bg-transparent;
+  }
 
-    .btn.bg--blue {
-        @apply bg-darkblue text-light hover:bg-lightblue
-    }
+  .btn.bg--blue {
+    @apply bg-darkblue text-light hover:bg-lightblue;
+  }
 
-    .btn.bg--border {
-        @apply border-[1px] border-black hover:bg-green hover:text-light
-    }
+  .btn.bg--border {
+    @apply border-[1px] border-black hover:bg-green hover:text-light;
+  }
+  .btn.bg--border--yellow {
+    @apply border-[1px] border-black bg-yellow text-light hover:bg-green;
+  }
 
-    .btn.bg--yellow {
-        @apply bg-yellow text-light px-10
-    }
+  .btn.bg--yellow {
+    @apply bg-yellow text-light px-10;
+  }
+  .btn.bg--green {
+    @apply bg-green text-light px-10 hover:bg-yellow;
+  }
 }
