--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
@@ -557,7 +557,7 @@ video {
 }
 
 h1,
-    h2{
+  h2{
   font-weight: 700;
 }
 
@@ -616,7 +616,6 @@ p{
 
 .header .header__branding{
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   border-bottom-width: 1px;
@@ -628,40 +627,6 @@ p{
 
 .header .header__branding img{
   max-width: 12.5rem;
-}
-
-.header .header__contactInfo{
-  display: none;
-  gap: 1rem;
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-@media (min-width: 768px){
-  .header .header__contactInfo{
-    display: flex;
-    align-items: center;
-  }
-}
-
-.header .header__contactInfo ul{
-  gap: 1rem;
-}
-
-@media (min-width: 768px){
-  .header .header__contactInfo ul{
-    display: flex;
-  }
-}
-
-.header .header__contactInfo ul li{
-  gap: 0.25rem;
-}
-
-@media (min-width: 768px){
-  .header .header__contactInfo ul li{
-    display: flex;
-  }
 }
 
 .header .header__navd{
@@ -711,13 +676,11 @@ p{
   border-style: none;
 }
 
-.header .header__navm{
+.header .header__action{
   position: absolute;
   right: 0px;
-  display: flex;
   height: 90vh;
   width: 0px;
-  justify-content: center;
   overflow: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -727,22 +690,42 @@ p{
 }
 
 @media (min-width: 768px){
-  .header .header__navm{
+  .header .header__action{
     display: none;
   }
 }
 
-.header .header__navm.open{
+.header .header__action.open{
   width: 100%;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.header .header__navm ul li{
-  margin: 1.5rem;
+.header .header__navm li{
   display: flex;
-  place-self: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.header .header__contactInfo ul li{
+  display: flex;
+  justify-content: center;
+  padding: 0.75rem;
+}
+
+@media (min-width: 768px){
+  .header .header__contactInfo{
+    top: 0px;
+  }
+
+  .header .header__contactInfo ul{
+    display: flex;
+  }
+}
+
+.header .header__contactInfo ul li{
+  gap: 1rem;
 }
 
 @media (min-width: 768px){
@@ -792,11 +775,46 @@ p{
   transition-duration: 150ms;
 }
 
+/* banner */
+
+.homeBanner{
+  height: 90vh;
+  background-image: url(../dist/img/videoPoster.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.homeBanner__wrapper{
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  text-align: center;
+}
+
+.homeBanner__wrapper h1{
+  margin-bottom: 20px;
+  display: flex;
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: clamp(39.36px,4vw,80px);
+}
+
+.homeBanner__wrapper p{
+  margin: auto;
+  margin-bottom: 5rem;
+  max-width: 45rem;
+}
+
+.hidden{
+  display: none;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
 
 .btn{
+  margin: auto;
   display: inline-block;
   border-radius: 0.375rem;
   background-color: transparent;
@@ -831,6 +849,21 @@ p{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.btn.bg--border--yellow{
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 166 37 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.btn.bg--border--yellow:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 148 30 / var(--tw-bg-opacity, 1));
+}
+
 .btn.bg--yellow{
   --tw-bg-opacity: 1;
   background-color: rgb(218 166 37 / var(--tw-bg-opacity, 1));
@@ -838,4 +871,32 @@ p{
   padding-right: 2.5rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.btn.bg--green{
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 148 30 / var(--tw-bg-opacity, 1));
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.btn.bg--green:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(218 166 37 / var(--tw-bg-opacity, 1));
+}
+
+@media (min-width: 768px){
+  .md\:block{
+    display: block;
+  }
+
+  .md\:flex{
+    display: flex;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
 }
